Bug 1343172 - PBlob should not create a remoteInputStream if that already exists, r=smaug. a=gchang